# raytracing-optimisation

./: CMakeLists.txt  generate_references.sh  main.cpp  quick_test.sh  report.md
scenes/: test_boundary.json  test_empty.json  test_no_lights.json  test_precision.json
src/raymath/: AABB.cpp  AABB.hpp  Color.cpp  Ray.cpp  Ray.hpp  Vector3.cpp  Vector3.hpp
src/rayscene/: BVHNode.cpp  BVHNode.hpp  CMakeLists.txt  Camera.cpp  Camera.hpp  Light.cpp  Light.hpp  Mesh.cpp  Mesh.hpp  Plane.cpp  Plane.hpp  Scene.cpp  Scene.hpp  SceneObject.cpp  SceneObject.hpp  Sphere.cpp  Sphere.hpp  Triangle.cpp  Triangle.hpp
tests/: CMakeLists.txt
tests/edge_cases/: test_boundary_conditions.cpp  test_degenerate_cases.cpp  test_numerical_precision.cpp
tests/standard/: test_complex_geometry.cpp  test_multi_object.cpp  test_regression_sphere.cpp  test_simple_sphere.cpp
tests/utils/: image_comparison.cpp  image_comparison.hpp  performance_metrics.cpp  performance_metrics.hpp  test_fixture.cpp  test_fixture.hpp
